--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
+    "node-localstorage": "^3.0.5",
     "react": "18.2.0",
     "react-native": "0.74.5"
   },
